infra/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - keycloak.192.168.50.10.nip.io
      secretName: keycloak-tls
  rules:
    - host: keycloak.192.168.50.10.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
